# django-rest-captcha

./: pyproject.toml
rest_captcha/: captcha.py  settings.py  utils.py
