[tool.poetry]
name = "django-rest-captcha"
version = "0.3.1"
description = "Lightweight version of django-simple-captcha for work with django-rest-framework"
readme = "README.md"
authors = ["evgeny.zuev <zueves@gmail.com>"]
license = "MIT"
packages = [
    {include = "rest_captcha"},
]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3"
django = "^5"
Pillow = "*"

[tool.poetry.dev-dependencies]
tox = "^3.5"
